[gd_scene load_steps=4 format=3 uid="uid://dvnyhrho8spwt"]

[ext_resource type="Script" path="res://ModelosAIs/Modelo.gd" id="1_tbqal"]
[ext_resource type="Texture2D" uid="uid://bxns81b57qnyv" path="res://ModelosAIs/sprits/terminal.jpg" id="2_8yruq"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_a4kx1"]

[node name="Modelo" type="Node2D"]
z_index = 10
script = ExtResource("1_tbqal")

[node name="GDLlama" type="GDLlama" parent="."]
model_path = "ModelosAIs/modelos/Qwen2-1.5B-Instruct-Q8_0.gguf"
should_output_prompt = false
n_predict = 239

[node name="StartButton" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 444.0
offset_top = 199.0
offset_right = 501.0
offset_bottom = 241.0
grow_horizontal = 0
grow_vertical = 2
text = "enter"

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 17.0
offset_top = 228.0
offset_right = 431.0
offset_bottom = 285.0

[node name="Terminal" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.890196)
texture_filter = 1
position = Vector2(225.375, 118.25)
scale = Vector2(0.107617, 0.0969906)
texture = ExtResource("2_8yruq")

[node name="terminal" type="RichTextLabel" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_a4kx1")
anchors_preset = -1
anchor_left = 0.306
anchor_top = 0.147
anchor_right = 0.743
anchor_bottom = 0.606
offset_left = 48.0
offset_top = 25.0
offset_right = 415.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="generate_text_finished" from="GDLlama" to="." method="_on_gd_llama_generate_text_finished"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
